beautified container_form, fixed linewrap

--- a/component_organizer/static/css/main.css
+++ b/component_organizer/static/css/main.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .item-box {
@@ -30,4 +31,12 @@ a {
 img {
     -webkit-filter: grayscale(100%) invert(100%); /* Safari 6.0 - 9.0 */
     filter: grayscale(40%) invert(100%);
+}
+
+.container-form {
+    background-color: #22303c;
+    margin: 2vw;
+    padding: 2vw;
+    justify-content: center;
+    align-items: center;
 }
